[package]
name = "mls-chat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Minimal CLI-based messaging app demonstrating MLS protocol concepts with end-to-end encryption"
license = "MIT"
repository = "https://github.com/yourusername/mls-chat"
keywords = ["mls", "messaging", "encryption", "cli", "demo"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI and user interface
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization and storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mls-chat"
path = "src/main.rs" 